# nao-rustmask

./: .gitignore  HANDOFF_CONTEXT.md  LICENSE  NEXT_STEPS.md  README.md
benchmark/: 1_HANDOFF_CONTEXT.md  2_BITPACKING_ANALYSIS.md  6_SIMD_PORTABILITY.md  OPTIMIZATION_RESULTS.md  README.md  baseline_benchmark.sh  bench_parallel.sh  check_memory.sh  debug_differences.sh  extract_diff_sequences.sh  profile_performance.sh  run_benchmark.sh  run_benchmark_all.sh  run_safe_benchmarks.sh
dev/: README.md
dev/benchmarks/: analyze_diff_patterns.sh  bench_parallel.sh  run_all_benchmarks.sh  test_compression_impact.sh  test_compression_levels.sh
dev/binaries/: mask_fastq_array.rs  memory_benchmark.rs
dev/docs/: 10_sdust-implementation-plan.md  3_PARALLEL_IMPLEMENTATION.md  5_PROFILING_ANALYSIS.md  7_PARALLELIZATION_ANALYSIS.md  8_MEMORY_ANALYSIS.md  9_dual_implementation_analysis.md
mask_fastq/: .gitignore  Cargo.toml
mask_fastq/src/: lib.rs
modules/local/maskRead/mask_fastq/: Cargo.toml  test_help.sh
modules/local/maskRead/mask_fastq/src/: lib.rs  main.rs
rustmasker/: Cargo.toml
rustmasker/src/: lib.rs
scripts/: benchmark_vs_bbmask.sh  benchmark_vs_sdust.sh  generate_test_data.py
scripts/test_data/: ERR3077527-100.fastq
