[package]
name = "mask_fastq"
version = "0.1.0"
edition = "2021"

# Define multiple binaries
[[bin]]
name = "mask_fastq"
path = "src/bin/mask_fastq.rs"

[[bin]]
name = "mask_fastq_parallel"
path = "src/bin/mask_fastq_parallel.rs"

[[bin]]
name = "memory_benchmark"
path = "src/bin/memory_benchmark.rs"

[[bin]]
name = "cache_test"
path = "src/bin/cache_test.rs"

[[bin]]
name = "encoding_benchmark"
path = "src/bin/encoding_benchmark.rs"

[dependencies]
needletail = "0.5"
flate2 = "1.0"
gzp = { version = "0.11", default-features = false, features = ["deflate_rust"] }
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
rayon = "1.8"

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary
