[package]
name = "rustmasker"
version = "0.2.0"
edition = "2021"

# Define binary
[[bin]]
name = "rustmasker"
path = "src/bin/rustmasker.rs"

[dependencies]
needletail = "0.5"
flate2 = "1.0"
gzp = { version = "0.11", default-features = false, features = ["deflate_rust"] }
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
rayon = "1.8"

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary
